Make the spinning a bit smoother

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
           <div class="has-text-centered">
             <div id="chosen" class="is-size-2 has-text-centered">&nbsp;</div>
             <div class="indicator">↓</div>
-            <div id="wheel"></div>
+            <span id="wheel"></span>
           </div>
         </article>
       </div>
